--- a/src/main/resources/templates/auth-sign-up.html
+++ b/src/main/resources/templates/auth-sign-up.html
@@ -26,6 +26,7 @@
         <link rel="stylesheet" th:href="@{/assets/vendor/doc-viewer/include/verySimpleImageViewer/css/jquery.verySimpleImageViewer.css}">
         <!--officeToHtml-->
         <link rel="stylesheet" th:href="@{/assets/vendor/doc-viewer/include/officeToHtml/officeToHtml.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/common.css}">
       <style>
             .sign-user_card h5 {
                 color: #613F9D;
@@ -35,6 +36,23 @@
                 margin-left: 10px;
                 flex: 1;
                 transition: all .6s ease-in-out;
+            }
+            .ant-message {
+                box-sizing: border-box;
+                margin: 0;
+                padding: 0;
+                color: rgba(0,0,0,.85);
+                font-size: 14px;
+                font-variant: tabular-nums;
+                line-height: 1.5715;
+                list-style: none;
+                font-feature-settings: "tnum";
+                position: fixed;
+                top: 8px;
+                left: 0;
+                z-index: 1010;
+                width: 100%;
+                pointer-events: none;
             }
          </style>
       </head>
@@ -53,46 +71,54 @@
             <div class="row justify-content-center align-items-center height-self-center">
                <div class="col-md-4 col-sm-12 col-12 align-self-center">
                   <div class="sign-user_card" style="border-color: #fff;background-color: #fff;border-radius: 16px;">
-                     <img th:src="@{/assets/images/logo.png}" class="img-fluid rounded-normal light-logo" style="height: 100px;" alt="logo">
-                     <img th:src="@{/assets/images/logo.png}" class="img-fluid rounded-normal darkmode-logo" style="height: 100px;" alt="logo">
-<!--                     <h5 style="color: #000">云文件分享系统</h5>-->
+                     <img th:src="@{/assets/images/logo.png}" class="img-fluid rounded-normal light-logo" style="height: 80px;" alt="logo">
+                     <img th:src="@{/assets/images/logo.png}" class="img-fluid rounded-normal darkmode-logo" style="height: 80px;" alt="logo">
                      <h4 class="mb-3">创建一个账号</h4>
                      <form th:action="@{/register}" method="POST">
                          <div class="row">
                              <div class="col-lg-12">
                                  <div class="floating-label form-group">
-                                     <input class="floating-input form-control" type="text" placeholder=" ">
-                                     <label>姓名/昵称</label>
+                                     <input class="floating-input form-control" type="text" required placeholder=" ">
+                                     <label>姓名</label>
                                  </div>
                              </div>
                              <div class="col-lg-12">
                                  <div class="floating-label form-group">
-                                     <input class="floating-input form-control" type="email" placeholder=" ">
+                                     <input class="floating-input form-control" id="username" type="email" required placeholder=" ">
                                      <label>电子邮箱</label>
                                  </div>
                              </div>
                              <div class="col-lg-6">
                                  <div class="floating-label form-group">
-                                     <input class="floating-input form-control" type="password" placeholder=" ">
+                                     <input class="floating-input form-control" type="text" required placeholder=" ">
+                                     <label>验证码</label>
+                                 </div>
+                             </div>
+                             <div class="col-lg-6" style="line-height: 42px;">
+                                 <button type="button" class="btn btn-primary send-mail">发送验证码</button>
+                             </div>
+                             <div class="col-lg-6">
+                                 <div class="floating-label form-group">
+                                     <input class="floating-input form-control" type="password" required placeholder=" ">
                                      <label>密码</label>
                                  </div>
                              </div>
                              <div class="col-lg-6">
                                  <div class="floating-label form-group">
-                                     <input class="floating-input form-control" type="password" placeholder=" ">
+                                     <input class="floating-input form-control" type="password" required placeholder=" ">
                                      <label>确认密码</label>
                                  </div>
                              </div>
                              <div class="col-lg-12">
                                  <div class="custom-control custom-checkbox mb-3 text-left">
-                                     <input type="checkbox" class="custom-control-input" id="customCheck1">
+                                     <input type="checkbox" class="custom-control-input" id="customCheck1" required>
                                      <label class="custom-control-label" for="customCheck1">我同意使用条款</label>
                                  </div>
                              </div>
                          </div>
-                         <button type="submit" class="btn btn-primary">注册</button>
+                        <button type="button" class="btn btn-primary submit" style="width: 100%;">注册</button>
                          <p class="mt-3">
-                             已经有一个账户 <a href="/toLogin" class="text-primary">登录</a>
+                             已经有一个账户 <a href="/toLogin" class="text-primary">立即登录</a>
                          </p>
                      </form>
                   </div>
@@ -101,7 +127,9 @@
          </div>
       </section>
       </div>
-    
+    <div class="ant-message">
+        <span></span>
+    </div>
     <!-- Backend Bundle JavaScript -->
     <script th:src="@{/assets/js/backend-bundle.min.js}"></script>
     
@@ -132,6 +160,57 @@
     <script th:src="@{/assets/js/doc-viewer.js}"></script>
     <!-- app JavaScript -->
     <script th:src="@{/assets/js/app.js}"></script>
+    <script type="text/javascript" th:inline="javascript">
+    var correctpass = true;
+        $(document).on("click", ".send-mail",function () {
+            checkEmail($('#username').val());
+            if(correctpass){
+                $(".send-mail").attr("disabled","disabled");//点击一次不可再点
+                sendCode()
+                var c = 60;
+                var interval = setInterval(function(){//定义定时器
+                    $(".send-mail").html(c+"s之后重试");
+                    c--;
+                    if(c == 0){
+                        clearInterval(interval);//清除定时器
+                        $(".send-mail").html("重新发送");
+                        $(".send-mail").removeAttr("disabled");//删除这个属性
+                        c=60;
+                    }
+                },1000);
+            }
+        });
+
+        function sendCode(){
+            $.ajax({
+                url:"/verify/sendMailCode",
+                type:"GET",
+                data:{to:$('#username').val()},
+                success:function (result) {
+                }
+            });
+        }
+
+    $(document).on("click", ".submit",function () {
+        $.ajax({
+            url:"/user/register",
+            type:"GET",
+            data:{to:$('#username').val()},
+            success:function (result) {
+            }
+        });
+    });
+
+        //验证手机号码
+        function checkEmail(email){
+            var myreg = /^([\.a-zA-Z0-9_-])+@([a-zA-Z0-9_-])+(\.[a-zA-Z0-9_-])+/;
+            if(!myreg.test(email)){
+                alert("请输入正确邮箱地址");
+                correctpass = false;
+            }else {
+                correctpass = true;
+            }
+        }
+    </script>
   </body>
-  <script type="text/javascript" src="https://js.mfpad.com/mfsapi.js"></script>
 </html>
