--- a/src/main/resources/templates/auth-sign-up.html
+++ b/src/main/resources/templates/auth-sign-up.html
@@ -78,7 +78,7 @@
                          <div class="row">
                              <div class="col-lg-12">
                                  <div class="floating-label form-group">
-                                     <input class="floating-input form-control" type="text" required placeholder=" ">
+                                     <input class="floating-input form-control" id="fullName" type="text" required placeholder=" ">
                                      <label>姓名</label>
                                  </div>
                              </div>
@@ -90,7 +90,7 @@
                              </div>
                              <div class="col-lg-6">
                                  <div class="floating-label form-group">
-                                     <input class="floating-input form-control" type="text" required placeholder=" ">
+                                     <input class="floating-input form-control" id="verifyCode" type="text" required placeholder=" ">
                                      <label>验证码</label>
                                  </div>
                              </div>
@@ -99,13 +99,13 @@
                              </div>
                              <div class="col-lg-6">
                                  <div class="floating-label form-group">
-                                     <input class="floating-input form-control" type="password" required placeholder=" ">
+                                     <input class="floating-input form-control" id="password" type="password" required placeholder=" ">
                                      <label>密码</label>
                                  </div>
                              </div>
                              <div class="col-lg-6">
                                  <div class="floating-label form-group">
-                                     <input class="floating-input form-control" type="password" required placeholder=" ">
+                                     <input class="floating-input form-control" id="qpassword" type="password" required placeholder=" ">
                                      <label>确认密码</label>
                                  </div>
                              </div>
@@ -192,11 +192,33 @@
         }
 
     $(document).on("click", ".submit",function () {
+        if($('#password').val() != $('#qpassword').val()){
+            alert("两次密码不一致!")
+        }
+        var dataFrom = {
+            username: $('#username').val(),
+            password: $('#password').val(),
+            fullName: $('#fullName').val(),
+            verifyCode: $('#verifyCode').val(),
+            email: $('#username').val()
+        }
         $.ajax({
             url:"/user/register",
-            type:"GET",
-            data:{to:$('#username').val()},
+            type:"POST",
+            data: dataFrom,
             success:function (result) {
+                console.log(result)
+                if(result.code == 200){
+                    alert("注册成功!");
+                    location.href = "/toLogin";
+                }else{
+                    alert(result.message);
+                }
+            },
+            error: function(xhr, textStatus, error){
+                console.log(xhr.statusText);
+                console.log(textStatus);
+                console.log(error);
             }
         });
     });
