--- a/src/main/resources/templates/common/nav.html
+++ b/src/main/resources/templates/common/nav.html
@@ -40,7 +40,7 @@
         <nav class="iq-sidebar-menu" style="height: 65%;">
             <ul id="iq-sidebar-toggle" class="iq-menu">
                 <li class="" th:classappend="${cid == 10010} ? 'active' : '' ">
-                    <a th:href="@{/?cid == 10010}" class="">
+                    <a th:href="@{/file?cid == 10010}" class="">
                         <i class="fa fa-hdd mr-1"></i><span>我的资源</span>
                     </a>
                     <ul id="dashboard" class="iq-submenu collapse" data-parent="#iq-sidebar-toggle">
@@ -92,10 +92,11 @@
 <script type="text/javascript" th:inline="javascript">
     var cid = [[${cid}]];
     var path = getUrlAndPort();
-    if(path.indexOf('/s/') >= 0 || path.indexOf('/resources') >= 0 || path.indexOf('/down') >= 0){
+    if(path.indexOf('/s/') >= 0 || cid == 10015 || path.indexOf('/down') >= 0){
         $('.data-scrollbar').addClass("hide");
         $('.iq-sidebar').css('height','auto');
     }else{
+        $('.data-scrollbar').removeClass("hide");
         setUrl(path + "?cid=" + cid);
         getFreeStorage();
     }
