--- a/src/main/resources/templates/resources-center.html
+++ b/src/main/resources/templates/resources-center.html
@@ -72,15 +72,14 @@
                                             <th scope="col">种类</th>
                                             <th scope="col">上传者</th>
                                             <th scope="col">分享时间</th>
-                                            <th scope="col">操作</th>
+<!--                                            <th scope="col">操作</th>-->
                                         </tr>
                                         </thead>
                                         <tbody class="list-contents list-cell">
                                         <tr th:each="share:${shareList}">
                                             <td>
                                                 <div class="file-name-wrap">
-                                                    <i class="file-type " th:classappend="'tb-' + ${share.ico}" th:if="${share.fileType} ne 'image'"></i>
-                                                    <img th:src="'/file/thumb?fid=' + ${share.fileId} + '.' + ${share.ico}" th:if="${share.fileType} eq 'image'" style="margin-right: 17px;" class="img-fluid avatar-30" alt="image1">
+                                                    <i class="file-type " th:classappend="'tb-' + ${share.ico}"></i>
                                                     <div class="file-name"><em>
                                                         <a href="javascript:;" btn="share_copy" receive_code="fa50" class="icon-lock"></a>
                                                         <a th:href="'/s/' + ${share.shareCode}" th:title="${share.fileName}" rel="share_href" target="_blank" class="name">
@@ -93,16 +92,16 @@
                                             <td th:text="${share.ico}"></td>
                                             <td th:text="${share.createdName}"></td>
                                             <td th:text="${#temporals.format(share.createdTime,'yyyy-MM-dd HH:mm')}"></td>
-                                            <td>
-                                                <div class="dropdown">
-                                                    <span class="dropdown-toggle" id="dropdownMenuButton10" data-toggle="dropdown">
-                                                        <i class="ri-more-fill"></i>
-                                                    </span>
-                                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton10">
-                                                        <a class="dropdown-item" href="#"><i class="ri-file-download-fill mr-2"></i>下载</a>
-                                                    </div>
-                                                </div>
-                                            </td>
+<!--                                            <td>-->
+<!--                                                <div class="dropdown">-->
+<!--                                                    <span class="dropdown-toggle" id="dropdownMenuButton10" data-toggle="dropdown">-->
+<!--                                                        <i class="ri-more-fill"></i>-->
+<!--                                                    </span>-->
+<!--                                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton10">-->
+<!--                                                        <a class="dropdown-item" href="#"><i class="ri-file-download-fill mr-2"></i>下载</a>-->
+<!--                                                    </div>-->
+<!--                                                </div>-->
+<!--                                            </td>-->
                                         </tr>
                                         </tbody>
                                     </table>
