1:修改新建文件夹bug

--- a/src/main/resources/templates/auth-sign-up.html
+++ b/src/main/resources/templates/auth-sign-up.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>注册 | ViHacker</title>
-      <meta name="description" content="支持存储和分享文件，支持api加密上传，可以快速和项目对接">
+      <meta name="description" content="管理个人和项目中的文件，支持存储和分享文件，支持api加密上传，可以快速和项目对接">
       <!-- Favicon -->
       <link rel="shortcut icon" th:href="@{/assets/images/favicon.ico}" />
       
