--- a/src/main/resources/templates/common/nav.html
+++ b/src/main/resources/templates/common/nav.html
@@ -30,7 +30,7 @@
                     <span class="caret"><!--icon--></span>
                 </label>
                 <ul class="dropdown-menu">
-                    <li data-toggle="modal" data-target="#exampleModalCenter"><div class="item"><i class="ri-folder-add-line pr-3"></i>新建文件夹</div></li>
+                    <li onclick="addFolder()"><div class="item"><i class="ri-folder-add-line pr-3"></i>新建文件夹</div></li>
                     <li data-toggle="modal" data-target=".bd-example-modal-lg">
                         <div class="item"><i class="ri-file-upload-line pr-3"></i>上传文件</div>
                     </li>
