--- a/src/main/resources/templates/resources-center.html
+++ b/src/main/resources/templates/resources-center.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>资源中心 | 云文件分享系统</title>
-
+    <meta name="description" content="管理个人和项目中的文件，支持存储和分享文件，支持api加密上传，可以快速和项目对接">
     <!-- Favicon -->
     <link rel="shortcut icon" th:href="@{/assets/images/favicon.ico}" />
     <link rel="stylesheet" th:href="@{/assets/css/iconfont.css}">
