1:集成WebSocket实现同屏聊天

--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -31,9 +31,10 @@
                 </div>
             </form>
         </div>
-        <div class="col-lg-5 col-md-3 col-sm-3" style="text-align: end;">
+        <div class="col-lg-5 col-md-3 col-sm-3" style="text-align: end;font-size: 15px;">
             <a href="/" th:if="${cid != 10015}">资源中心</a>
             <a href="/file" th:if="${cid == 10015}">我的资源</a>
+            <a href="/chat/room" target="_blank" style="margin-left: 10px;">同屏畅聊室</a>
         </div>
         <div class="d-flex align-items-center">
             <div class="change-mode">
