--- a/src/main/resources/templates/auth-sign-up.html
+++ b/src/main/resources/templates/auth-sign-up.html
@@ -79,7 +79,7 @@
                              <div class="col-lg-12">
                                  <div class="floating-label form-group">
                                      <input class="floating-input form-control" id="fullName" type="text" required placeholder=" ">
-                                     <label>姓名</label>
+                                     <label>昵称</label>
                                  </div>
                              </div>
                              <div class="col-lg-12">
@@ -198,7 +198,7 @@
         var dataFrom = {
             username: $('#username').val(),
             password: $('#password').val(),
-            fullName: $('#fullName').val(),
+            nickName: $('#fullName').val(),
             verifyCode: $('#verifyCode').val(),
             email: $('#username').val()
         }
