--- a/src/main/resources/templates/resources-center.html
+++ b/src/main/resources/templates/resources-center.html
@@ -166,7 +166,7 @@
         $.ajax({
             url:"/resources/list",
             type:"GET",
-            data:{fileName:"s"},
+            data:{fileName:""},
             success:function (result) {
                 $('.table-responsive').html(result);
             }
